feat: log for errors
